# Updated-KCNet-GarNet-ROS

./: README.md  baxter.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
devel/include/calibration_glasgow/: HandEyeCalibration.h  HandEyeCalibrationRequest.h  HandEyeCalibrationResponse.h
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  ResizeConfig.h  (+1 more)
src/: .rosinstall  .rosinstall.bak
src/kcnet_garnet_project/: CMakeLists.txt  package.xml
src/pcl_cloud_point/: CMakeLists.txt  package.xml
src/pcl_cloud_point/cfg/: algorithmParameters.cfg
src/pcl_cloud_point/src/: downsampling.cpp  segmentation.cpp  segmentation_backup.cpp  segmentation_experiment.cpp
(+353 files in other folders)
